# sdl3-tutorial

./: .gitignore  CMakeLists.txt  README.md  TESTING_SETUP.md  conanfile.py
game/: main.cpp  player.cpp  player.h
public/: aurora_engine_public.h
public/engine/: animation.h  engine.h  engine_types.h  game_object.h  main_app.h  time_keeper.h  timer.h  types.h  window.h  world.h
public/engine/components/: component.h  transform_component.h
public/engine/subsystems/: input_subsystem.h
public/engine/subsystems/input/: input_subsystem.h  input_types.h
public/game/: player.h
scripts/: build_and_copy.ps1
src/: CMakeLists.txt  animation.cpp  engine.cpp  game_object.cpp  main.cpp
src/engine/: engine.cpp  game_object.cpp  main_app.cpp  timer.cpp  window.cpp  world.cpp
src/engine/subsystems/: input_subsystem.cpp
src/game/: player.cpp
src/subsystems/: input_subsystem.cpp
tests/: CMakeLists.txt  test_main.cpp
